# cargotrack-pro

./: .env.example  .gitignore  _diag_ed11003_anchors.py  _diag_my11003.py  dashboard.yml  dashboard_full.yml  deploy.ps1  hawb_decl_pairs.txt  list.yml  manage.py  pyproject.toml  requirements.txt  watch_seed.py
.claude/: CLAUDE.md
alta_agent/: README.md  agent_svh.py  alta_agent.ini.example  alta_agent.py  dump_do1_today.py  svh_query.ps1
cargo/: admin.py  apps.py  cql_parser.py  load_test_data.py  models.py  serializers.py  sla.py  urls.py  views.py  widget_columns.py  widget_registry.py  workflow_runner.py
cargo/migrations/: 0001_initial.py  0002_alter_cargo_queue_cargoassignment.py  0002_hawb_new_statuses.py  0003_cargo_stage.py  0003_housewaybill.py  0004_housewaybill_doc_invoice_and_more.py  0005_housewaybill_cargo_type_housewaybill_scan_into_bond_and_more.py  0006_housewaybill_docs_required_hawbgood_hawbdocument.py  0007_alter_housewaybill_mawb.py  0008_merge_20260416_1137.py  0009_merge_0003_cargo_stage_0008_merge_20260416_1137.py  0010_departure_date.py  0011_add_doc_cargo_type.py  0012_document_checklist.py  0013_initial_document_types.py  0014_cargo_type_doc_template.py  0015_hawbgood_approval.py  0016_hawbgood_cargo_type.py  0017_hawbgood_cargo_type_backfill.py  0018_dashboardwidget.py  0019_workflow_models.py  0020_workflow_entity_binding.py  (+50 more)
cargotrack/: settings.py  urls.py  wsgi.py
docs/: smoketest_bugs.md  smoketest_results.md
scripts/: import_sheets.ps1  run_crm_no_korobkova.py  run_crm_reindex.py  verify_backfill.py  verify_backfill_extra.py
(+266 files in other folders)
