[project]
name = "cargotrack-pro"
version = "0.1.0"
description = "Django web app for air freight customs clearance and cargo tracking"
requires-python = ">=3.13"
dependencies = [
    "Django==4.2.13",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.4.0",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.1",
    "whitenoise==6.7.0",
    "waitress==3.0.0",
    "lxml>=5.3.0",
]
